; ModuleID = '/home/carl/AnghaBench/git/extr_string-list.c_string_list_lookup.c'
source_filename = "/home/carl/AnghaBench/git/extr_string-list.c_string_list_lookup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.string_list_item = type { i32 }
%struct.string_list = type { %struct.string_list_item* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.string_list_item* @string_list_lookup(%struct.string_list* %0, i8* %1) #0 {
  %3 = alloca %struct.string_list_item*, align 8
  %4 = alloca %struct.string_list*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.string_list* %0, %struct.string_list** %4, align 8
  store i8* %1, i8** %5, align 8
  %8 = load %struct.string_list*, %struct.string_list** %4, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = call i32 @get_entry_index(%struct.string_list* %8, i8* %9, i32* %6)
  store i32 %10, i32* %7, align 4
  %11 = load i32, i32* %6, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %14, label %13

13:                                               ; preds = %2
  store %struct.string_list_item* null, %struct.string_list_item** %3, align 8
  br label %21

14:                                               ; preds = %2
  %15 = load %struct.string_list*, %struct.string_list** %4, align 8
  %16 = getelementptr inbounds %struct.string_list, %struct.string_list* %15, i32 0, i32 0
  %17 = load %struct.string_list_item*, %struct.string_list_item** %16, align 8
  %18 = load i32, i32* %7, align 4
  %19 = sext i32 %18 to i64
  %20 = getelementptr inbounds %struct.string_list_item, %struct.string_list_item* %17, i64 %19
  store %struct.string_list_item* %20, %struct.string_list_item** %3, align 8
  br label %21

21:                                               ; preds = %14, %13
  %22 = load %struct.string_list_item*, %struct.string_list_item** %3, align 8
  ret %struct.string_list_item* %22
}

declare dso_local i32 @get_entry_index(%struct.string_list*, i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
